--- a/Excel Projects/Readme
+++ b/Excel Projects/Readme
@@ -1,5 +1,5 @@
 That's a dataset with Bike sales.
-In the first shet its the raw data
+In the first sheet it's the raw data
 Second sheet, it's the data after the cleaning process
 Third sheet, there are some pivot tables
-And finally at the last sheet, its the dashboard witch some information which could come useful.
+And finally at the last sheet, it's the dashboard with some information which could come useful.
