--- a/Excel Projects/Readme
+++ b/Excel Projects/Readme
@@ -1,7 +1,9 @@
-That's a dataset with Bike sales.
+It's two excel projects which are downloable so you can check my work.
+
+First dataset is about Bike sales.
 In the first sheet it's the raw data
 Second sheet, it's the data after the cleaning process
 Third sheet, there are some pivot tables
 And finally at the last sheet, it's the dashboard with some information which could come useful.
 
-
+Second dataset is about Adidas US sales with a dynamic dashboard.
