--- a/SQL-Tableau Projects/1.Readme.md
+++ b/SQL-Tableau Projects/1.Readme.md
@@ -1,4 +1,7 @@
-# Tableau-Visions
+The COVID-19 Vaccination Project analyzed and visualized the progress of the COVID-19 vaccination campaign using Tableau. 
+The data was used to track the distribution and administration of vaccines, as well as to identify trends and disparities in the distribution of vaccines across different demographic groups. The results of the project helped to inform policy decisions and improve the efficiency of the vaccination campaign.
+
+
 That's the Sql Query used for Tableau visions found [here](https://public.tableau.com/app/profile/lefteris.x/viz/BikeSalesProject_16740321900540/Dashboard1)
 
 All my Tableau projects [here](https://public.tableau.com/app/profile/lefteris.x)
