--- a/Excel Projects/Readme
+++ b/Excel Projects/Readme
@@ -1,4 +1,4 @@
-It's two excel projects which are downloable so you can check my work.
+Two Excel projects.
 
 The first dataset is 'Bike Sales Dashboard'.
 The raw data is presented in the first sheet, followed by a cleaned data sheet. 
